<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.row.rowActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="103dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/textViewappointmentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/appointment_type"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewAppointmentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewappointmentType"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/patient_name_row"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewappointmentType" />

    <TextView
        android:id="@+id/viewPatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewPatientName"
        app:layout_constraintTop_toBottomOf="@+id/textViewappointmentType" />

    <TextView
        android:id="@+id/textViewClincName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/clinc_name_row"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientName" />

    <TextView
        android:id="@+id/viewClincName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewClincName"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientName" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewClincName" />

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewClincName" />
</androidx.constraintlayout.widget.ConstraintLayout>